# enqu-te

./: .env.example  IMPLEMENTATION_COMPLETE.md  README.md  RUST_PORT_SUMMARY.md  requirements.txt
django_app/: .gitignore  manage.py  port.md  setup.py
django_app/investigation/: __init__.py  admin.py  api_urls.py  apps.py  forms.py  models.py  urls.py  views.py
django_app/investigation/migrations/: 0001_initial.py  0005_tag_entity_tags.py  (+1 more)
django_app/investigation_project/: __init__.py  settings.py
django_app/templates/: base.html
investigation/: admin.py  api_urls.py  models.py  views.py
investigation/migrations/: 0002_investigationmember_last_seen.py  0003_entity_address_alter_entity_entity_type.py  0004_entity_event_end_date_entity_is_timeslot.py
investigation_project/: settings.py  urls.py  wsgi.py
rust_app/: .env.example  .gitignore  BUILD_GUIDE.md  Cargo.toml  IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md
rust_app/migrations/: 20240101000000_initial_schema.sql
rust_app/src/: error.rs  extractors.rs  main.rs
rust_app/src/handlers/: auth.rs  entity.rs  investigation.rs  link.rs  mod.rs
rust_app/src/middleware/: auth.rs
rust_app/src/models/: attachment.rs  comment.rs  entity.rs  investigation.rs  link.rs  mod.rs  tag.rs  user.rs
rust_app/src/utils/: auth.rs  code_generator.rs  mod.rs
rust_app/tests/: integration_test.rs
static/js/: investigation_detail.js
templates/: base.html
templates/investigation/: create_investigation.html  dashboard.html  home.html  investigation_detail.html
templates/registration/: login.html
(+11 files in other folders)
